oc/01-opentelemetry-collector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opentelemetry-endpoint-deployment
  labels:
    app: opentelemetry-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry-endpoint
  template:
    metadata:
      labels:
        app: opentelemetry-endpoint
    spec:
      containers:
        - name: opentelemetry-endpoint
          image: artifactory:5000/nginxinc/nginx-unprivileged:alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: opentelemetry-endpoint-config
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-endpoint-service
  labels:
    app: opentelemetry-endpoint
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: opentelemetry-endpoint
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opentelemetry-endpoint-ingress
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - tracing-otel-collector.apps.ocp-test.cloud.nuernberger.net
      secretName: nv-default-cert
  rules:
    - host: tracing-otel-collector.apps.ocp-test.cloud.nuernberger.net
      http:
        paths:
          - backend:
              service:
                name: opentelemetry-endpoint-service
                port:
                  name: http
            pathType: ImplementationSpecific
