oc/03-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-deployment
  labels:
    app: company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company
  template:
    metadata:
      labels:
        app: company
      annotations:
        "resource.opentelemetry.io/service.name": "company-service"
        "instrumentation.opentelemetry.io/inject-java": "true"
    spec:
      containers:
        - name: company
          image: artifactory:5000/andreasgerner/distributed-tracing/sample-company:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '128Mi'
            limits:
              memory: '512Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: company-service
  labels:
    app: company
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: company
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-ingress
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - tracing-company.apps.ocp-test.cloud.nuernberger.net
      secretName: nv-default-cert
  rules:
    - host: tracing-company.apps.ocp-test.cloud.nuernberger.net
      http:
        paths:
          - backend:
              service:
                name: company-service
                port:
                  name: http
            pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
      annotations:
        "resource.opentelemetry.io/service.name": "payment-service"
        "instrumentation.opentelemetry.io/inject-java": "true"
    spec:
      containers:
        - name: payment
          image: artifactory:5000/andreasgerner/distributed-tracing/sample-payment:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '128Mi'
            limits:
              memory: '512Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: payment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - tracing-payment.apps.ocp-test.cloud.nuernberger.net
      secretName: nv-default-cert
  rules:
    - host: tracing-payment.apps.ocp-test.cloud.nuernberger.net
      http:
        paths:
          - backend:
              service:
                name: payment-service
                port:
                  name: http
            pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-angular-deployment
  labels:
    app: web-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-angular
  template:
    metadata:
      labels:
        app: web-angular
    spec:
      containers:
        - name: web-angular
          image: artifactory:5000/andreasgerner/distributed-tracing/sample-web-angular:oc
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-angular-service
  labels:
    app: web-angular
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: web-angular
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-angular-ingress
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - tracing-web-angular.apps.ocp-test.cloud.nuernberger.net
      secretName: nv-default-cert
  rules:
    - host: tracing-web-angular.apps.ocp-test.cloud.nuernberger.net
      http:
        paths:
          - backend:
              service:
                name: web-angular-service
                port:
                  name: http
            pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-next-deployment
  labels:
    app: web-next
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-next
  template:
    metadata:
      labels:
        app: web-next
      annotations:
        "resource.opentelemetry.io/service.name": "web-next"
        "instrumentation.opentelemetry.io/inject-nodejs": "true"
    spec:
      containers:
        - name: web-next
          image: artifactory:5000/andreasgerner/distributed-tracing/sample-web-next:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-next-service
  labels:
    app: web-next
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: web-next
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-next-ingress
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - tracing-web-next.apps.ocp-test.cloud.nuernberger.net
      secretName: nv-default-cert
  rules:
    - host: tracing-web-next.apps.ocp-test.cloud.nuernberger.net
      http:
        paths:
          - backend:
              service:
                name: web-next-service
                port:
                  name: http
            pathType: ImplementationSpecific
