oc/00-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bachelorarbeit-tracing
spec:
  podSelector: {}
  ingress:
    - from:
        - ipBlock:
            cidr: 172.16.0.0/12
      ports:
        - port: 3000
          protocol: TCP
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
        - port: 16686
          protocol: TCP
  policyTypes:
    - Ingress
